# kubernetes-wsgi

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: main.yml
src/kubernetes_wsgi/: __main__.py  metrics.py  server.py
tests/: test_main.py  test_server.py
tests/app1/: wsgi.py
