[metadata]
name = kubernetes_wsgi
version = attr: kubernetes_wsgi.__version__
description = A wrapper for running your Python web application using Twisted in a way that works well for Kubernetes.
long_description = file: README.md
license = Apache License 2.0
url = https://github.com/coderanger/kubernetes-wsgi
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
install_requires =
    Twisted
    prometheus_client

[options.extras_require]
dev =
    pytest
    requests
tests =
    pytest
    requests

[options.packages.find]
where = src
